# samla

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr.yml  publish.yml
samla/: __init__.py
samla/fetch/: __init__.py  assemble.py  fetch.py  filter.py  query.py
samla/files/: __init__.py  from_file.py
samla/table/: __init__.py  column.py  table.py
tests/: fixtures.py  test_fetch.py  test_files.py  test_filter.py
